# oss-crs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
builder/: README.md
builder/oss-crs/: crs.yaml
crs/src/: crs.py  crs_compose.py  target.py  ui.py  utils.py
crs_registry/test-local/: config-crs.yaml  pkg.yaml
docs/: README.md  crs-development-guide.md  llm-providers.md  registry.md  setup.md
docs/config/: crs-compose.md  crs.md  llm.md  target-project.md
docs/design/: architecture.md  libCRS.md  parallel.md
docs/meeting/: Makefile
example/atlantis-java-main/: compose.yaml  litellm-config.yaml
example/atlantis-multilang-given_fuzzer/: compose.yaml
example/atlantis-multilang-wo-concolic/: compose.yaml
example/crs-claude-code/: compose.yaml  litellm-config.yaml
example/crs-codex/: compose.yaml
example/crs-gemini-cli/: compose.yaml
example/crs-libfuzzer/: compose.yaml
example/crs-multi-retrieval/: compose.yaml  litellm-config.yaml
example/crs-patch-ensemble/: compose.yaml  litellm-config.yaml
example/crs-prism/: compose.yaml  litellm-config.yaml
example/crs-shellphish/: compose.yaml
example/crs-shellphish-aijon/: compose.yaml
example/crs-shellphish-discoveryguy/: compose.yaml
example/crs-shellphish-grammar/: compose.yaml
example/crs-vincent/: compose.yaml  litellm-config.yaml
example/ensemble/: compose.yaml  ensemble-compose.yaml
example/fuzzing-brain/: compose.yaml  litellm-config.yaml
example/lacrosse-seed-gen/: compose.yaml  litellm-config.yaml
example_configs/test-local/: .gitignore  config-litellm.yaml  config-resource.yaml  config-worker.yaml
libCRS/: README.md  install.sh  pyproject.toml
libCRS/libCRS/: base.py  common.py  fetch.py  infra_client.py  local.py  sarif.py  submit.py
libCRS/libCRS/cli/: main.py
libCRS/src/: base.py  common.py  fetch.py  infra_client.py  local.py  submit.py
libCRS/src/cli/: main.py
oss-crs-infra/builder-sidecar/: Dockerfile  docker_ops.py  requirements.txt  (+3 more)
registry/: atlantis-java-main.yaml  builder-sidecar-full.yaml  builder-sidecar-lite.yaml  crs-bug-finding-codex.yaml  crs-bug-finding-copilot-cli.yaml  crs-bug-finding-gemini-cli.yaml  crs-codex.yaml  crs-libfuzzer.yaml  crs-multi-retrieval.yaml  crs-patch-ensemble.yaml  crs-prism.yaml  crs-shellphish-aijon.yaml  crs-shellphish-c-fuzzers.yaml  crs-shellphish-discoveryguy.yaml  crs-shellphish-grammar.yaml  crs-shellphish-jvm-fuzzers.yaml  crs-shellphish-quickseed.yaml  crs-shellphish.yaml  crs-vincent.yaml  fuzzing-brain.yaml  lacrosse-seed-gen.yaml
scripts/: setup-third-party.sh  verify-patch-all.py  verify-patch-inc.sh  verify-patch-no-inc.sh  verify.py
(+122 files in other folders)
