[project]
name = "libcrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=6.0.0",
    "requests>=2.33.0",
]


[project.scripts]
"libCRS" = "libCRS.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["libCRS", "libCRS.*"]
